--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -1,37 +1,19 @@
-# Your workflow name.
-name: Deploy to Heroku
-
-# Run workflow on every push to master branch.
+name: Build, Push and Deploy to Heroku
 on:
   push:
-    branches: [main]
-
-# Your workflows jobs.
+    branches: ["main"]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Check-out your repository.
       - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Build, Push and Release a Docker container to Heroku.
-        uses: gonuit/heroku-docker-deploy@v1.3.3
+        uses: actions/checkout@v2
+      - name: Build, Push and Deploy to Heroku
+        id: heroku
+        uses: jctaveras/heroku-deploy@v1.0.0
         with:
-        
-          email: ${{ secrets.HEROKU_EMAIL }}
-          
-          # Heroku API key associated with provided user's email.
-          # Api Key is available under your Heroku account settings.
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          
-          # Name of the heroku application to which the build is to be sent.
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-
-          dockerfile_directory: ./
-
-          dockerfile_name: Dockerfile
-
-          docker_options: "--no-cache"
-
-          process_type: web
+          email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
+          api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
+          app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
+          dockerfile_path: '.' # set the path to the folder where the Dockerfile is located
+          process_type: 'web' # Specify the process type you want to build and release
